--- a/style.css
+++ b/style.css
@@ -3,3 +3,8 @@ body {
     background-color: pink;
     text-align: center;
 }
+
+.container1 {
+    background-image: url("gitStuffs\assets\franksinatra.jpg");
+    background-repeat: no-repeat;
+}
