--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
     margin: 0;
-    background-color: pink;
     text-align: center;
-    background-image: url("gitStuffs\assets\franksinatra.jpg");
-    background-repeat: no-repeat;
+    background-image: url("gitStuffs\\assets\\franksinatra.jpg");
+    background-color: pink;
 }
