--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    background-color: aliceblue;
     margin: 0;
     text-align: center;
     background-image: url("gitStuffs\\assets\\franksinatra.jpg");
