--- a/style.css
+++ b/style.css
@@ -2,5 +2,5 @@ body {
     background-color: aliceblue;
     margin: 0;
     text-align: center;
-    background-image: url("\\franksinatra.jpg");
+    background-image: url("franksinatra.jpg");
 }
