--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
     margin: 0;
     text-align: center;
-    background-image: url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.mitology.it%2F2017%2F09%2F27%2F1986-concerto-frank-sinatra-milano%2F&psig=AOvVaw2885-z98rSceQAm1tMjD0n&ust=1644083360487000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCMjUyPfN5vUCFQAAAAAdAAAAABAD);
+    background-image: url("https://www.mitology.it/wp-content/uploads/sites/3/2017/09/franksinatra.jpg");
 }
