--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-* {
-    margin: 0;
-    text-align: center;
-    background-image: url("https://www.mitology.it/wp-content/uploads/sites/3/2017/09/franksinatra.jpg");
-}
+                * {
+                margin: 0;
+                text-align: center;
+                background-image: url("https://www.mitology.it/wp-content/uploads/sites/3/2017/09/franksinatra.jpg");
+                background-repeat: no-repeat;
