--- a/style.css
+++ b/style.css
@@ -4,3 +4,6 @@
                     background-image: url("https://www.mitology.it/wp-content/uploads/sites/3/2017/09/franksinatra.jpg");
                     background-repeat: no-repeat;
                 }
+                .pino{
+                    position: relative;
+                }
