--- a/this is it/StyleS/style.css
+++ b/this is it/StyleS/style.css
@@ -1,4 +1,34 @@
 body{
     margin: 0;
     text-align: center;  
+    background-color: #6666;
+}
+
+.upper {
+    position: absolute;
+    text-align: center;
+    display: inline-block;
+    margin: auto;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+.upper input{
+    border-radius: 15px;
+    padding: 4px;
+    margin: 10px 20px ;
+    
+}
+.upper label:hover{
+    opacity: 0.5;
+    color: orange;
+    font-size: small;
+}
+
+.sbmt {
+    display:flex;
+    width: fit-content;
+    text-align: center;
+    margin-left: 160px;
+    border: 2px solid orange ;
+    border-radius: 30px;
+    color: red;
 }
