--- a/this is it/StyleS/style.css
+++ b/this is it/StyleS/style.css
@@ -1,3 +1,5 @@
+@media screen and(min-width:600px) {
+
 body{
     margin: 0;
     text-align: center;  
@@ -61,4 +63,6 @@ body{
     text-decoration: none;
     color: green;
     font-weight: 600;
+}
+
 }
